Web page tweaks.

--- a/index.html
+++ b/index.html
@@ -45,24 +45,22 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
       
-    <h1><a href="http://github.com/dwdyer/ansiconsolelogger">ansiconsolelogger</a> 
-      <span class="small">by <a href="http://github.com/dwdyer">dwdyer</a></span></h1>
+    <h1><a href="http://github.com/dwdyer/ansiconsolelogger">ANSI Console Logger</a> 
+      <span class="small">by <a href="http://github.com/dwdyer">Dan Dyer</a></span></h1>
 
     <div class="description">
-      A colour-coded console appender for Log4J.
+      A colour-coded console appender for <a href="http://logging.apache.org/log4j/index.html">Log4J</a>.
     </div>
 
     <h2>License</h2>
-<p>Apache Licence Version 2.0</p>
-<h2>Authors</h2>
-<p>Dan Dyer<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Dan Dyer (www.uncommons.org)<br/>      </p>
-
+    <p><a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache Licence</a></p>
 
     <h2>Download</h2>
     <p>
-      You can download this project in either
+      <a href="http://cloud.github.com/downloads/dwdyer/ansiconsolelogger/ansiconsolelogger.jar">ansiconsolelogger.jar</a>
+    </p>
+    <p>
+      You can download this project's source in either
       <a href="http://github.com/dwdyer/ansiconsolelogger/zipball/master">zip</a> or
       <a href="http://github.com/dwdyer/ansiconsolelogger/tarball/master">tar</a> formats.
     </p>
