--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
       <span class="small">by <a href="http://github.com/dwdyer">Dan Dyer</a></span></h1>
 
     <div class="description">
-      A colour-coded console appender for <a href="http://logging.apache.org/log4j/index.html">Log4J</a>.
+      <p>A colour-coded console appender for <a href="http://logging.apache.org/log4j/index.html">Log4J</a>.</p>
+      <img src="screenshot.png" alt="Screenshot" width="599" height="350" />
     </div>
 
     <h2>License</h2>
